objects/disco__Question__c.object
<CustomObject>
    <description>A question included in a Form Template that belongs to a Section</description>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__Alignment__c</fullName>
        <description>alignment for text/image questions</description>
        <inlineHelpText>alignment for text/image questions</inlineHelpText>
        <label>Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Center</fullName>
                    <default>true</default>
                    <label>Center</label>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Allow_Barcode_Scanning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked on Field Link Lookup questions, a button appears on the mobile app that opens the mobile barcode scanner.</description>
        <label>Allow Barcode Scanning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Allow_Camera_Roll_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check to allow Youreka Mobile users to select existing photos from their camera roll / camera gallery</description>
        <inlineHelpText>check to allow Youreka Mobile users to select existing photos from their camera roll / camera gallery</inlineHelpText>
        <label>Allow Camera Roll Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Allow_OCR_Scanning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked allows OCR scanning on Youreka Mobile for question.</description>
        <inlineHelpText>If checked allows OCR scanning on Youreka Mobile for question.</inlineHelpText>
        <label>Allow OCR Scanning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Always_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether a question is always hidden.</description>
        <inlineHelpText>Determines whether a question is always hidden.</inlineHelpText>
        <label>Always Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Auto_Name_Photos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Name Photos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Barcode_Field__c</fullName>
        <description>ID field name that will be used to lookup barcode scans via mobile</description>
        <inlineHelpText>ID field name that will be used to lookup barcode scans via mobile</inlineHelpText>
        <label>Barcode Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Bold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Check_Intent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Intent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Check_Sentiment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Sentiment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Check_Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Color__c</fullName>
        <label>Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Column__c</fullName>
        <label>Column</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Compact_Layout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the question should use a compact layout that has been optimized for a smaller amount of content.</description>
        <label>Compact Layout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Custom_Formula_Metadata__c</fullName>
        <description>Contains metadata for the custom formula such as picklist value weights.</description>
        <inlineHelpText>Contains metadata for the custom formula such as picklist value weights.</inlineHelpText>
        <label>Custom Formula Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Custom_Formula_Treat_Blank_As_Zero__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, Custom Formulas will evaluate even if not all inputs have values. Blanks will be treated as zero.</description>
        <inlineHelpText>If true, Custom Formulas will evaluate even if not all inputs have values. Blanks will be treated as zero.</inlineHelpText>
        <label>Custom Formula Treat Blank As Zero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Custom_Formula__c</fullName>
        <description>String containing custom formula logic</description>
        <label>Custom Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__DMY_Format__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, date and date/time questions will display with the DD/MM/YYYY format instead of the normal MM/DD/YYYY.</description>
        <inlineHelpText>If checked, date and date/time questions will display with the DD/MM/YYYY format instead of the normal MM/DD/YYYY.</inlineHelpText>
        <label>DMY Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Date_Validation_Error__c</fullName>
        <description>If a date entered is before the specified minimum date or later that they specified maximum date, show this error message to the user filling in the form.</description>
        <inlineHelpText>If a date entered is before the specified minimum date or later that they specified maximum date, show this error message to the user filling in the form.</inlineHelpText>
        <label>Date Validation Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Decimal_Length__c</fullName>
        <description>length of decimal value for number,currency, percent questions</description>
        <inlineHelpText>length of decimal value for number,currency, percent questions</inlineHelpText>
        <label>Decimal Length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Default_Value__c</fullName>
        <description>Default answer value</description>
        <inlineHelpText>Default answer value</inlineHelpText>
        <label>Default Value</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Dependent_Question_Values__c</fullName>
        <inlineHelpText>Separate your values with commas.  For example, values of Green, Yellow, and Red would appear as (Green,Yellow,Red)</inlineHelpText>
        <label>Dependent Question Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Discovery_Field_For_Discovery__c</fullName>
        <label>Discovery Field For Discovery</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Discovery_Field_For_Form__c</fullName>
        <label>Discovery Field For Form</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__FL_Display_As__c</fullName>
        <label>FL Display As</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Radio Button List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Field_Length_Min__c</fullName>
        <description>Minimum length for data entry</description>
        <inlineHelpText>Minimum length for data entry</inlineHelpText>
        <label>Field Length Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Field_Length__c</fullName>
        <label>Field Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Filter_Logic__c</fullName>
        <description>User input string of Filter Logic for Dependent Questions</description>
        <label>Filter Logic</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Form_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Template</label>
        <referenceTo>disco__Form_Template__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Formula_Group_Id__c</fullName>
        <description>ID that identifies all questions that are part of the same formula</description>
        <inlineHelpText>ID that identifies all questions that are part of the same formula</inlineHelpText>
        <label>Formula Group Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Image_Version_ID__c</fullName>
        <description>content version record ID for image questions</description>
        <inlineHelpText>content version record ID for image questions</inlineHelpText>
        <label>Image Version ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__In_LS_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies questions that will be displayed in Linked Section Cards on Complete Form.</description>
        <label>In LS Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Indentation__c</fullName>
        <label>Indentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level One</fullName>
                </value>
                <value>
                    <fullName>Level Two</fullName>
                </value>
                <value>
                    <fullName>Level Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Inherited_Value_Field__c</fullName>
        <description>name of field to inherit value from</description>
        <inlineHelpText>name of field to inherit value from</inlineHelpText>
        <label>Inherited Value Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Inherited_Value_Relationship__c</fullName>
        <description>name of relationship to retrieve inherited value from</description>
        <inlineHelpText>name of relationship to retrieve inherited value from</inlineHelpText>
        <label>Inherited Value Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Intent_Model__c</fullName>
        <description>intent model number</description>
        <label>Intent Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Is_Text_Formula__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field linked field is a text formula. Not accurate for older templates.</description>
        <label>Is Text Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Label__c</fullName>
        <description>This is the text that will be displayed on the Form to prompt the users for an answer.</description>
        <label>Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Link_Answer_Field__c</fullName>
        <description>name of the answer field its stored in</description>
        <label>Link Answer Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Link_Field__c</fullName>
        <description>field name for field link question type</description>
        <label>Link Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Link_Lookup_Object__c</fullName>
        <description>object name for field link lookups</description>
        <inlineHelpText>object name for field link lookups</inlineHelpText>
        <label>Link Lookup Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Link_Lookup__c</fullName>
        <description>name of lookup on form object used by this field link question</description>
        <label>Link Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Link_Object__c</fullName>
        <description>object name for field link question type</description>
        <label>Link Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Lookup_Fieldset__c</fullName>
        <description>Fieldset used to determine which fields to show for field link lookups.</description>
        <inlineHelpText>Fieldset used to determine which fields to show for field link lookups.</inlineHelpText>
        <label>Lookup Fieldset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Lookup_Filter_Type__c</fullName>
        <label>Lookup Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Lookup_Filter__c</fullName>
        <label>Lookup Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Lookup_Question_RandomId__c</fullName>
        <description>random ID for lookup question in related linked section to use as identifier in search results</description>
        <inlineHelpText>random ID for lookup question in related linked section to use as identifier in search results</inlineHelpText>
        <label>Lookup Question RandomId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Lookup_Type__c</fullName>
        <description>sets field link lookup type</description>
        <label>Lookup Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>In Form</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Make_Discovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Discovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Managed_Template_RandomId__c</fullName>
        <description>Formula Field with the Random Id of the Managed Template if it is part of one</description>
        <formula>disco__Section__r.disco__Managed_Template_RandomId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed Template RandomId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Maximum_Days__c</fullName>
        <label>Maximum Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Maximum_Value_Comparison__c</fullName>
        <label>Maximum Value Comparison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>lessThan</fullName>
                </value>
                <value>
                    <fullName>lessThanOrEquals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Maximum_Value_Question_Random_Id__c</fullName>
        <label>Maximum Value Question Random Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Maximum_Value__c</fullName>
        <description>For numbers, the largest acceptable value. For dates, the latest acceptable date</description>
        <label>Maximum Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Minimum_Days__c</fullName>
        <label>Minimum Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Minimum_Value_Comparison__c</fullName>
        <label>Minimum Value Comparison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>greaterThan</fullName>
                </value>
                <value>
                    <fullName>greaterThanOrEquals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Minimum_Value_Question_Random_Id__c</fullName>
        <label>Minimum Value Question Random Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Minimum_Value__c</fullName>
        <description>For numbers, the minimum value to be accepted. For dates, the earliest date.</description>
        <label>Minimum Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Parent_Picklist_ID__c</fullName>
        <description>If this question is a dependent picklist, the random ID of the controlling Question</description>
        <label>Parent Picklist ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Photo_Name_Type__c</fullName>
        <label>Photo Name Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Picklist_Dependency__c</fullName>
        <description>Holds map for dependent picklist fields</description>
        <inlineHelpText>Holds map for dependent picklist fields</inlineHelpText>
        <label>Picklist Dependency</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Picklist_Value_Translation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the field link&apos;s picklist value set has differences between API Name and Label</description>
        <label>Picklist Value Translation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Question_RandomId_in_Managed_Template__c</fullName>
        <description>For questions copied in from Managed Templates, this is the Question.RandomId of the corresponding question in the Managed Template</description>
        <inlineHelpText>For questions copied in from Managed Templates, this is the Question.RandomId of the corresponding question in the Managed Template</inlineHelpText>
        <label>Question RandomId in Managed_Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__RandomId__c</fullName>
        <description>used in code only</description>
        <label>RandomId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if the question is read-only for all users</description>
        <inlineHelpText>checked if the question is read-only for all users</inlineHelpText>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Section_Random_Id__c</fullName>
        <description>used by form builder, associates question with section until its inserted into SF and gets an actual ID</description>
        <label>Section Random Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>disco__Section__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Show_Tooltip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if question on a form should display a custom tooltip</description>
        <label>Show Tooltip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Smart_Lookup_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smart Lookup Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Smart_Lookup_Fieldset__c</fullName>
        <description>Fieldset to use for guided lookups</description>
        <inlineHelpText>Fieldset to use for guided lookups</inlineHelpText>
        <label>Smart Lookup Fieldset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Tooltip_Label__c</fullName>
        <description>Custom tooltip displayed on questions in Complete Forms</description>
        <label>Tooltip Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Attachment/Photo</fullName>
                </value>
                <value>
                    <fullName>Checkbox List</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>E-Signature</fullName>
                </value>
                <value>
                    <fullName>Field Link</fullName>
                </value>
                <value>
                    <fullName>Free Text</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Long Text</fullName>
                </value>
                <value>
                    <fullName>Multi-select Picklist</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Radio Button List</fullName>
                </value>
                <value>
                    <fullName>Space</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Validation_Message__c</fullName>
        <label>Validation Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Validation_Regex__c</fullName>
        <description>Regular expression to be used for validation during data entry</description>
        <inlineHelpText>Regular expression to be used for validation during data entry</inlineHelpText>
        <label>Validation Regex</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Vision_Model__c</fullName>
        <description>vision model number</description>
        <label>Vision Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>